Fazendo a logica de ganhos e percas

--- a/templates/niquel.html
+++ b/templates/niquel.html
@@ -35,8 +35,15 @@
         <section class="panel game-area">
             <h2>Area do Jogo</h2>
             <div class="Roleta">
-                <p id="Combinações"></p>
+                <div id="Combinações" class="reels">
+                    <span class="reel">🎰</span>
+                    <span class="reel">🎰</span>
+                    <span class="reel">🎰</span>
+                </div>
                 <p>Valor a apostar: <span id="valor-aposta">10</span></p>
+                <p>Valor ganho:<span id="valor-ganho">0</span></p>
+                <p>Valor perdido:<span id="valor-perdido">0</span></p>
+                <p>Resultado:<span id="resultado">0</span></p>
                 <div class="controls">
                     <button id="aumentar-aposta">+</button>
                     <button id="diminuir-aposta">-</button>
