montando logica de ganhos e perdas

--- a/templates/niquel.html
+++ b/templates/niquel.html
@@ -43,7 +43,7 @@
                 <p>Valor a apostar: <span id="valor-aposta">10</span></p>
                 <p>Valor ganho:<span id="valor-ganho">0</span></p>
                 <p>Valor perdido:<span id="valor-perdido">0</span></p>
-                <p>Resultado:<span id="resultado">0</span></p>
+                <p>Resultado:<span id="resultado"></span></p>
                 <div class="controls">
                     <button id="aumentar-aposta">+</button>
                     <button id="diminuir-aposta">-</button>
