Caça niquel feito,fazendo roleta

--- a/templates/jogos.html
+++ b/templates/jogos.html
@@ -25,19 +25,19 @@
 
         <section class="games-grid">
             <a class="game-card" href="niquel.html">
-                <img class="game-thumb" src="../static/img/fundo.jpg" alt="Caca Niquel">
+                <img class="game-thumb" src="../static/img/caça-niquel.jpg" alt="Caca Niquel">
                 <h2>Caca Niquel</h2>
                 <p>Gire os rolos e busque combinacoes premiadas.</p>
                 <button class="game-action">Jogar</button>
             </a>
             <div class="game-card is-disabled">
-                <img class="game-thumb" src="../static/img/fundo.jpg" alt="Roleta">
+                <img class="game-thumb" src="../static/img/roleta.png" alt="Roleta">
                 <h2>Roleta</h2>
                 <p>Em breve: escolha cores e numeros.</p>
                 <button class="game-action" disabled>Jogar</button>
             </div>
             <div class="game-card is-disabled">
-                <img class="game-thumb" src="../static/img/fundo.jpg" alt="Blackjack">
+                <img class="game-thumb" src="../static/img/blackjack.png" alt="Blackjack">
                 <h2>Blackjack</h2>
                 <p>Em breve: chegue o mais perto de 21.</p>
                 <button class="game-action" disabled>Jogar</button>
