Fazer funções de aposta e animar a roleta

--- a/templates/jogos.html
+++ b/templates/jogos.html
@@ -30,12 +30,12 @@
                 <p>Gire os rolos e busque combinacoes premiadas.</p>
                 <button class="game-action">Jogar</button>
             </a>
-            <div class="game-card is-disabled">
+            <a class="game-card" href="roleta.html">
                 <img class="game-thumb" src="../static/img/roleta.png" alt="Roleta">
                 <h2>Roleta</h2>
-                <p>Em breve: escolha cores e numeros.</p>
-                <button class="game-action" disabled>Jogar</button>
-            </div>
+                <p>Escolha sua cor ou numero e gire.</p>
+                <button class="game-action">Jogar</button>
+            </a>
             <div class="game-card is-disabled">
                 <img class="game-thumb" src="../static/img/blackjack.png" alt="Blackjack">
                 <h2>Blackjack</h2>
