Pagina do blackJack feita,falta a logica

--- a/templates/jogos.html
+++ b/templates/jogos.html
@@ -36,12 +36,12 @@
                 <p>Escolha sua cor ou numero e gire.</p>
                 <button class="game-action">Jogar</button>
             </a>
-            <div class="game-card is-disabled">
+            <a class="game-card" href="blackjack.html">
                 <img class="game-thumb" src="../static/img/blackjack.png" alt="Blackjack">
                 <h2>Blackjack</h2>
-                <p>Em breve: chegue o mais perto de 21.</p>
-                <button class="game-action" disabled>Jogar</button>
-            </div>
+                <p>Chegue o mais perto de 21 sem estourar.</p>
+                <button class="game-action">Jogar</button>
+            </a>
         </section>
     </main>
 </body>
