--- a/templates/jogos.html
+++ b/templates/jogos.html
@@ -42,6 +42,12 @@
                 <p>Chegue o mais perto de 21 sem estourar.</p>
                 <button class="game-action">Jogar</button>
             </a>
+            <a class="game-card" href="ppt.html">
+                <img class="game-thumb" src="../static/img/ppt.jpg" alt="ppt(Pedra,Papel,Tesoura)">
+                <h2>Pedra, Papel e Tesoura</h2>
+                <p>Jogue contra o computador.</p>
+                <button class="game-action">Jogar</button>
+            </a>
         </section>
     </main>
 </body>
